tiny alignment fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -87,7 +87,7 @@ li {
 .image-footer::before {
     content: "\2023";
     position: absolute;
-    right: 10px;
+    right: 12px;
     bottom: 43px;
     transform: rotate(90deg);
     color:hsla(0, 4%, 60%, 0.62);
